# expenses-monitor

./: .copilotignore  Dockerfile  README.md  build.gradle  docker-compose.yml  entrypoint.sh  package-lock.json  settings.gradle
backend-rust/: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migrate  Dockerfile_aarch64  MIGRATION_COMPLETED.md  README.md  configuration.yaml  configuration.yaml.example
backend-rust/.sqlx/: query-006149bdde461c54ba8b18fb4cff0ad591c7a5219dd2a549a313635847620181.json  query-00dffd9e5780ec3d1649b8a00d0ede4c44c56611f25f8560aea5df3f4b783e34.json  query-0147a654ebae7655b2ac2c39f49e76f29ebdc52ba38259929baebab30fc8611e.json  query-0182f1027b85722d72d2c8fd0c31d34b6e2bc89ceeba65d9fa8c54e32fd3d1c5.json  query-03163279a1729e161e33f05b843273430eaa7f24c77daf39ef5db1815892a4e1.json  query-0324a7696207637417dc7104b681e01770a2dc3a08874556799e9310dab16286.json  query-039843b6373fefdfc1843d6abbbed2fdab0a0ded16595c9c012618a508703171.json  query-0478e4cb8f8446990a1cda9b60b86fdfc071f6eaf63bb60e65da10e8460553d1.json  query-04e05d486bc4b4bad69ee5271efb6275ea64966d1b1d3b564c0025264ebfa560.json  query-05b6dca315341f1ed620fa108b9bb83e1c73004bb0e6706e50c4787552b390c2.json  query-05f7786a37327a43c18e8bdf46aa0f721fe265c6394200a7231c078e83d8890e.json  query-0cc6929d00c5df51d6ad7aaa672a68136daabef3edf862bf65bd150244a8e36d.json  query-0de0e55981e09255c4af632f7d6a1f5f218a67b7b73f6ce7516dc9d508576563.json  query-14972444ec66a86ff8e764a35547f4ee77abddad80c80b5455c679e29a8484e6.json  query-1a16e5354f7a1e8bc6de08d3ed0d9b5bd1a69b6661929df905ec40bf872fa374.json  query-1d090ae26e3bba86a7a8bf666f577b742d48253e5d82e5d2688bb8b9c3ae46ba.json  query-1d1264e853d0ebf2acbaf8242f9c97599d04d478a2f9619fba97fc4462bfba2d.json  query-1f9611c703dbda07a8410f0c979877a68d96b33a966951c6a900e498628824a9.json  (+75 more)
backend-rust/scripts/: init_db.sh
database/: init.sh  (+4 more)
(+624 files in other folders)
