[package]
name = "expenses-monitor-be"
version = "0.2.3"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "expenses-monitor-be"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.207", features = ["derive"] }
config = "0.14.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.26.0"
opentelemetry = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-async-std", "rt-tokio"] }
opentelemetry-otlp = { version = "0.25.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.25.0"
chrono = { version = "0.4.38", features = ["serde"] }
secrecy = { version = "0.10.2", features = ["serde"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.5"
rstest = "0.22.0"
once_cell = "1"
